--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "C:\\Users\\Insite\\Anaconda3\\python.exe"
+    "python.pythonPath": "venv\\Scripts\\python.exe"
 }
